<resources>
    <string name="app_name">Центр здоровья</string>
    <string name="toGetService">Записаться к врачу</string>
    <string name="AboutHealthCentre">О поликлинике</string>
    <string name="OurMedics">Наши врачи</string>
    <string name="BackButton">Назад</string>
    <string name="toGetHistory">История посещений</string>
    <string name="toGetOut">Выйти</string>
    <string name="toGetIn">Войти</string>
    <string name="loginValue">Логин</string>
    <string name="passwordValue">Пароль</string>
    <string name="toJoin">Зарегистрироваться</string>
    <string name="lastName">Фамилия</string>
    <string name="firstName">Имя</string>
    <string name="toChooseTheDocText">Выбрать врача</string>
    <string name="phone">Телефон</string>
    <string name="get">GET</string>
    <string name="setDate">Выбрать дату</string>
</resources>